--- a/style.css
+++ b/style.css
@@ -6,6 +6,17 @@ body {
   padding: 0;
 }
 
+@font-face {
+  font-family:bahnschrift;
+  src: url(fonts/bahnschrift.ttf);
+}
+
+@font-face {
+  font-family:textwww;
+  src: url(fonts/textwww.ttf);
+}
+
+
 .dark-vertion.black-bg {
   background-color: #100e17;
 }
@@ -26,61 +37,79 @@ body {
   transition: 0.5s;
 }
 
-/* Tạo một div với kích thước bằng màn hình và đặt hình ảnh bên trong */
-.cover-image {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
-}
+.background {
+ /* The image used */
+ background-image: url("img/8sZQI6Q.jpg");
 
-/* Đảm bảo rằng hình ảnh sẽ bao phủ toàn bộ diện tích của div */
-.cover-image img {
-  width: 100%;
-  height: auto;
-}
+ /* Full height */
+ height: 100vh; 
 
-.cover-image {
-  position: relative;
-}
-
-.overlay {
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  width: 100%;
-  height: 100%;
-  /* background-color: rgba(255, 255, 255, 0.5) */
+ /* Center and scale the image nicely */
+ background-position: center;
+ background-repeat: no-repeat;
+ background-size: cover;
 }
 
 .avatar img {
-  border: 20px solid #ccc;
   width: 400px;
   border-radius: 50%;
-  left: 100px;
-  bottom: 50px;
 }
 
 .container-fluid {
   padding: 0;
 }
 
-.overlay {
+.avatar {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.avatar,
-.text {
-  margin: 0 100px;
+.background {
+  align-items: center;
 }
 
-.text {
+.hello {
+  font-size: 45px;
+}
+
+.name {
+  font-size: 55px;
+}
+
+/* .rolename {
+  font-family: textwww !important;
+} */
+
+.intro-text {
   font-size: 24px;
   color: white;
+  font-family: bahnschrift;
+}
+
+.intro-text-container {
+  padding-top: 40px;
+  padding-bottom: 100px;
+}
+
+.social-icons a {
+  color: white;
+  font-size: 40px;
+  text-decoration:none;
+
+}
+
+
+.contact {
+  border-top: 1px  solid #f3f3f3;
+}
+
+.title-contact {
+  font-weight: bold;
+}
+
+.contact-detail {
+  font-weight:lighter ;
 }
 
 .about p {
@@ -91,7 +120,7 @@ body {
 }
 
 .about img {
-  width: 500px;
+  width: 450px;
 }
 
 .mh-about {
